assets/css/main.css
@import url("../font-awesome/css/font-awesome.min.css");
@import url("http://fonts.googleapis.com/css?family=Raleway:600,400,300");


/* Table of Contents
––––––––––––––––––––––––––––––––––––––––––––––––––
- For Style Guide Only
- Global
- Buttons
- Cards
- Media
- Panels
- Typography
- Navbar
- Forms
- Utilities

- Header
*/


/* *** FOR STYLE GUIDE ONLY ***
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.example-grid .column,
.example-grid .columns {
  background: rgb(238, 238, 238);
  text-align: center;
  border-radius: 4px;
  font-size: 1rem;
  text-transform: uppercase;
  height: 30px;
  line-height: 30px;
  margin-bottom: 1.5rem;
  font-weight: 600;
  letter-spacing: 0.1rem;
}

.example-panel {
	background-color: #696969;
	color: white;
}

.example-navbar {
	margin-top: 0;
}

pre.prettyprint {
	border: none !important;
}


/* Global
–––––––––––––––––––––––––––––––––––––––––––––––––– */
html, body {
	height: 100%;
}

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

hr {
	margin: 0.5rem 0;
}


/* Buttons
–––––––––––––––––––––––––––––––––––––––––––––––––– */
button,
.button,
input[type="button"],
input[type="submit"],
input[type="reset"] {
	border-radius: 0;
	margin: 0;
	-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border 0.2s ease-in-out;
	        transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border 0.2s ease-in-out;
}

.button-light {
	color: #fff !important;
	border: 1px solid #fff !important;
}

	.button-light:hover,
	.button-lgiht:focus {
		color: #aaa !important;
		border: 1px solid #aaa !important;
	}

.button-large,	
.form-group-large button,
.form-group-large .button,
.form-group-large input[type="button"],
.form-group-large input[type="submit"],
.form-group-large input[type="reset"] {
	font-size: 1.4em;
	padding: 0.6em;
	height: auto;
}


/* Cards
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.card {
	border: 1px solid #e4e4e4;
	padding: 2em;
	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
	-webkit-transition: all 250ms;
	        transition: all 250ms;
}


/* Media
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.media {
	display: block;
	width: 100%;
	position: relative;
	margin: 2.5em 0;
}

.media-left,
.media-right,
.media-top,
.media-bottom {
	display: block;
	width: 100%;
}	

	.media-left img,
	.media-right img,
	.media-top img,
	.media-bottom img {
		width: 100%;
	}
	
.media-left,
.media-top {
	margin-bottom: 1em;
}

.media-right,
.media-bottom {
	margin-top: 1em;
}

.media-heading {
	margin-top: 0;
	margin-bottom: 0.25em;
}

.media-body {
	display: block;
	width: 100%;
}

	.media-body p {
		margin: 0;
	}

/* Larger than phablet */
@media screen and (min-width: 550px) {
	.media:after {
		content: "";
		display: table;
		clear: both;
	}
	
	.media-left,
	.media-right {
		display: inline-block;
		max-width: 34%;
		width: auto;
		vertical-align: top;
	}
	
	.media-left {
		margin-bottom: 0;
		margin-right: 1%;
		float: left;
	}
	
	.media-right {
		margin-top: 0;
		margin-left: 1%;
		float: right;
	}

	.media-body {
		display: inline-block;
		vertical-align: middle;
		width: auto; 
	}
	
	.media-left + .media-body,
	.media-right + .media-body {
		max-width: 65%;
	}
	
	.media-top + .media-body {
		max-width: 100%;
	}
}


/* Panels
–––––––––––––––––––––––––––––––––––––––––––––––––– */
section {
	margin-top: 4rem;
	margin-bottom: 4.5rem;
}

.panel {
	padding: 6em 0;
	width: 100%;
}

	.panel code {
		padding: 0;
		margin: 0;
		background: none;
		border: none;
		border-radius: 0;
	}

/* Phablet and smaller */
@media screen and (max-width: 550px) {
	.panel {
		padding: 2em 0;
	}
}


/* Typography
–––––––––––––––––––––––––––––––––––––––––––––––––– */
h1 { margin-top: 3rem; }
h2 { margin-top: 2.5rem; }
h3 { margin-top: 2rem; }
h4 { margin-top: 1.5rem; }
h5 { margin-top: 1rem; }
h6 { margin-top: 1rem; }

.lead {
	font-size: 1.4em;
	font-weight: 300;
	line-height: 1.6;
}

.rule:after {
	content: "";
	height: 1px;
	width: 4em;
	background: rgba(144,144,144,0.5);
	display: block;
	margin-top: 0.4em;
}

	.light-rule:after {
		background: rgba(255,255,255,0.5);
	}

blockquote {
	border-left: 5px solid rgba(144,144,144,0.5);
	padding-left: 0.5em;
}

ul {
	list-style: circle outside;
	padding-left: 1.4em;
}

ol {
	list-style: decimal outside;
	padding-left: 1.6em;
}


/* Navbar
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.navbar {
	background-color: #000;
	color: #fff;
	height: 55px;
	line-height: 55px;
	z-index: 100;
	width: 100%;
	position: fixed;
}

	.navbar .container {
		position: static;
	}

.navbar-header {
	font-size: 1.4em;
	font-weight: 600;
}

	.navbar-header img {
		margin: 10px 12px 14px 0;
		vertical-align: middle;
	}

	.navbar-header a {
		color: #fff;
		text-decoration: none;
		-webkit-transition: opacity 0.2s ease-in-out;
		        transition: opacity 0.2s ease-in-out;
	}
	
	.navbar-header a:hover,
	.navbar-header a:focus {
		opacity: 0.7;
	}

.hamburger {
	float: right;
	width: 22px;
	cursor: pointer;
	margin-top: 18.5px;
}

	.hamburger span {
		display: block;
		background-color: #fff;
		height: 3px;
		margin-top: 4px;
		border-radius: 2px;
		-webkit-transition: 250ms ease-in-out;
		        transition: 250ms ease-in-out;
	}
	
		.hamburger span:first-child {
			margin-top: 0;
		}

	.active .hamburger span:first-child {
		opacity: 1;
		-webkit-transform: translateY(7px) rotate(-45deg);
			-ms-transform: translateY(7px) rotate(-45deg);
				transform: translateY(7px) rotate(-45deg);
	}
	
	.active .hamburger span:last-child {
		opacity: 1;
		-webkit-transform: translateY(-7px) rotate(45deg);
			-ms-transform: translateY(-7px) rotate(45deg);
				transform: translateY(-7px) rotate(45deg);
	}
	
	.active .hamburger span {
		opacity: 0;
	}

.navbar-nav {
	display: none;
	position: absolute;
	width: 100%;
	left: 0;
	top: 55px;
}

	.navbar-nav ul {
		text-align: center;
		font-size: 1.2em;
		list-style: none;
		margin: 0;
		padding: 0;
	}
/* ... */

